--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.8.0
+  animate_do: ^3.3.4
+  flutter_launcher_icons: ^0.14.1
+  firebase_auth: ^5.3.3
 
 dev_dependencies:
   flutter_test:
@@ -18,3 +21,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+
+flutter_icons:
+  image_path: 'assets/dog-nose.png'
+  android: true
+  ios: true
