--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   animate_do: ^3.3.4
   flutter_launcher_icons: ^0.14.1
   firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
