--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
+  flutter_onboarding_slider: ^1.0.11
 
 dev_dependencies:
   flutter_test:
