--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   flutter_onboarding_slider: ^1.0.11
   google_sign_in: ^6.2.2
   flutter_facebook_auth: ^7.1.1
+  google_nav_bar: ^5.0.7
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
