--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   google_nav_bar: ^5.0.7
   multi_select_flutter: ^4.1.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
