--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   multi_select_flutter: ^4.1.3
   shimmer: ^3.0.0
   dropdown_button2: ^2.3.9
+  google_maps_flutter: ^2.10.0
+  supabase_flutter: ^2.8.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
