--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   supabase_flutter: ^2.8.1
   image_picker: ^1.1.2
   provider: ^6.1.2
+  shared_preferences: ^2.3.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
