--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.3
   google_fonts: ^6.2.1
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
