--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.3.3
   google_fonts: ^6.2.1
   lottie: ^3.1.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
