--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.1.3
   url_launcher: ^6.3.1
+  awesome_snackbar_content: ^0.1.4
 
 dev_dependencies:
   flutter_test:
