--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   lottie: ^3.1.3
   url_launcher: ^6.3.1
   awesome_snackbar_content: ^0.1.4
+  http: ^1.2.2
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
